test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST__api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 09 May 2025 05:07:28 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="u/a4QOs4TsWc2L0SmSECPBAqb5V8IZ+5", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 30

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}